# gitoxide

./: .gitignore  AGENTS.md  CLAUDE_CODE_GIT.md  Cargo.toml  README.md
.cargo/: config.toml
branch-client/: Cargo.toml  README.md
branch-client/src/: error.rs  main.rs
branch-client/src/cmd/: cleanup.rs  compare.rs  create.rs  delete.rs  list.rs  mod.rs
branch-client/src/sdk/: branch.rs  mod.rs  repo.rs
branch-client/tests/: basic.rs  compare_cleanup.rs
branch-client/tests/common/: mod.rs
git-productivity-analyzer/: Cargo.toml  README.md
git-productivity-analyzer/src/: error.rs  main.rs  util.rs
git-productivity-analyzer/src/cmd/: common.rs  mod.rs
git-productivity-analyzer/src/cmd/churn/: args.rs  run.rs
git-productivity-analyzer/src/cmd/commit_frequency/: args.rs  run.rs
git-productivity-analyzer/src/cmd/commit_size/: args.rs  run.rs
git-productivity-analyzer/src/cmd/frecency/: args.rs  mod.rs  run.rs
git-productivity-analyzer/src/cmd/hours/: args.rs  run.rs
git-productivity-analyzer/src/cmd/ownership/: args.rs  run.rs
git-productivity-analyzer/src/cmd/streaks/: args.rs  run.rs
git-productivity-analyzer/src/cmd/time_of_day/: args.rs  run.rs
git-productivity-analyzer/src/sdk/: common.rs  diff.rs  helpers.rs  mod.rs  revision.rs  stats.rs
git-productivity-analyzer/src/sdk/churn/: analyzer.rs  diff_utils.rs  mod.rs
git-productivity-analyzer/src/sdk/commit_frequency/: analyzer.rs  mod.rs  processor.rs
git-productivity-analyzer/src/sdk/commit_size/: analyzer.rs  mod.rs
git-productivity-analyzer/src/sdk/frecency/: analyzer.rs  mod.rs  printer.rs  scoring.rs  traversal.rs
git-productivity-analyzer/src/sdk/hours/: analyzer.rs  mod.rs  parser.rs
git-productivity-analyzer/src/sdk/ownership/: analyzer.rs
git-productivity-analyzer/src/sdk/streaks/: analyzer.rs  mod.rs  processor.rs
git-productivity-analyzer/src/sdk/time_of_day/: analyzer.rs  mod.rs  processor.rs
git-productivity-analyzer/tests/: churn.rs  commit_frequency.rs  commit_size.rs  frecency.rs  hours.rs  ownership.rs  streaks.rs  time_of_day.rs  util.rs
(+38 files in other folders)
