[package]
name = "git-productivity-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Dependencies
[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
# Path relative to workspace root
gitoxide-core = { path = "../gitoxide-core", features = ["estimate-hours"] }
gix = { path = "../gix", default-features = false, features = ["progress-tree"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
bytecount = "0.6"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"

[package.metadata]
# For workspace though

